changed test apis
